# usage-exploration

./: .gitignore  CONTRIBUTING.md  Dockerfile  PLAN.md  README.md  checklist.md  doc.md  pyproject.toml
.github/workflows/: ci.yml
docs/: checklist.md  diagram.md  legacy-comparison.md  phase1_scope.md  refactor_plan.md  utilization.md
docs/scratch/: PLAN.md  architecture_future.md  deliverables.md  old.md  readme_archived.md
etc/: edge_projects.json  rules.yaml  site.yml  sites.yaml
examples/: example.ipynb  example.py  explore.ipynb  explore.py  report.py  report_edge.py
scripts/: ruff.sh
src/chameleon_usage/: adapters.py  audit.py  cli.py  config.py  constants.py  dump_db.py  engine.py  exceptions.py  legacyusage.py  loader.py  main.py  make_spans.py  math.py  pipeline.py  plots.py  registry.py  schemas.py  sources.py  spans.py  utils.py
src/chameleon_usage/all/: common.py  spans.py
src/chameleon_usage/core/: intervals.py
src/chameleon_usage/data_import/: __init__.py
src/chameleon_usage/extract/: dump_db.py
src/chameleon_usage/ingest/: __init__.py  adapters.py  audit.py  coerce.py  legacyusage.py  loader.py  rawschemas.py
src/chameleon_usage/math/: __init__.py  sweepline.py  timeseries.py  transforms.py
src/chameleon_usage/models/: domain.py  raw.py
src/chameleon_usage/output/: compat.py
src/chameleon_usage/viz/: matplotlib_plots.py  plots.py  prepare.py
tests/integration/: test_pipeline.py  test_pipeline_integration.py
tests/unit/: test_intervals.py  test_pipeline.py  test_schemas.py
tests/unit/ingest/: test_audit.py  test_coerce.py
tests/unit/math/: test_intervals.py  test_sweepline.py  test_timeseries.py
